<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_home">App1u</string>
    <string name="textGpsUpdatesStatusLabel">GPS update freq:</string>
    <string name="textGpsUpdatesStatus">-</string>
    <string name="textPointA">Point A:</string>
    <string name="textPointB">Point B:</string>
    <string name="editLat1">Lat A</string>
    <string name="editLon1">Lon A</string>
    <string name="editAlt1">Alt A</string>
    <string name="editLat2">Lat B</string>
    <string name="editLon2">Lon B</string>
    <string name="editAlt2">Alt B</string>
    <string name="editPlateNo">Plate No</string>
    <string name="buttonSavePlateNo">Save Setting</string>
    <string name="textLatLon">0.000000,-0.000000 alt: 0.00</string>
    <string name="textLastTime">-</string>
    <string name="textDist">Distance(m): </string>
    <string name="editDist">0.00</string>
    <string name="button1">Pin A</string>
    <string name="button2">Pin B</string>
    <string name="button3">Save to DB</string>
    <string name="buttonRefreshCount">Refresh</string>
    <string name="buttonResetCount">Reset Counters</string>
    <string name="buttonSend">Send 100</string>
    <string name="buttonListenGps5">5 sec</string>
    <string name="buttonListenGps180">180 sec</string>
    <string name="buttonStopGps">Stop GPS</string>
    <string name="textView1">TextView1</string>
    <string name="textGpsCnt">0</string>
    <string name="textSendCnt">0</string>
    <string name="textDbLocationCount">0</string>
    <string name="title_activity_display_message">App1u - Message</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>

</resources>